--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -1,30 +1,22 @@
-<menu xmlns:android = "http://schemas.android.com/apk/res/android"
-      xmlns:app = "http://schemas.android.com/apk/res-auto"
-      xmlns:tools = "http://schemas.android.com/tools"
-      tools:context = ".MainActivity">
+<menu xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    tools:context=".MainActivity">
     <item
-          android:id="@+id/action_settings"
-          android:title="@string/action_settings"
-          android:orderInCategory="100"
-          app:showAsAction="always" />
-    <item android:id = "@+id/action_net"
-          android:title = "@string/action_net"
-          android:orderInCategory="101"
-          app:showAsAction="always" />
-    <item android:id = "@+id/action_exit"
-          android:title = "@string/action_exit"
-          android:orderInCategory="102"
-          app:showAsAction="always" />
-    <item android:id = "@+id/action_quit"
-          android:title = "@string/action_quit"
-          android:orderInCategory="103"
-          app:showAsAction="always" />
-    <item android:id = "@+id/action_break"
-          android:title = "@string/action_break"
-          android:orderInCategory="104"
-          app:showAsAction="always" />
-    <item android:id = "@+id/action_about"
-          android:title = "@string/action_about"
-          android:orderInCategory="105"
-          app:showAsAction="always" />
+        android:id="@+id/action_settings"
+        android:title="@string/action_settings" />
+    <item
+        android:id="@+id/action_net"
+        android:title="@string/action_net" />
+    <item
+        android:id="@+id/action_exit"
+        android:title="@string/action_exit" />
+    <item
+        android:id="@+id/action_quit"
+        android:title="@string/action_quit" />
+    <item
+        android:id="@+id/action_break"
+        android:title="@string/action_break" />
+    <item
+        android:id="@+id/action_about"
+        android:title="@string/action_about" />
 </menu>
