--- a/app/src/main/res/menu/menu_file.xml
+++ b/app/src/main/res/menu/menu_file.xml
@@ -14,6 +14,9 @@
                 android:id="@+id/file_add"
                 android:title="@string/file_add" />
             <item
+                android:id="@+id/file_import"
+                android:title="@string/file_import" />
+            <item
                 android:id="@+id/file_save"
                 android:title="@string/file_save" />
             <item
