--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,5 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+    <color name = "colorBackground">#000000</color>
+    <color name = "colorText">#03B603</color>
     <color name = "colorPrimary">#3F51B5</color>
     <color name = "colorPrimaryDark">#303F9F</color>
     <color name = "colorAccent">#FF4081</color>
