--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,7 +2,7 @@
 <resources>
 <!--    <color name = "colorBackground">#000000</color>
     <color name = "colorText">#03B603</color>  -->
-    <color name="colorPrimary">#008577</color>
-    <color name="colorPrimaryDark">#00574B</color>
-    <color name="colorAccent">#D81B60</color>
+    <color name="colorPrimary">#0481D8</color>
+    <color name="colorPrimaryDark">#44007E</color>
+    <color name="colorAccent">#1EFC06</color>
 </resources>
