--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,6 +1,6 @@
 <resources>
-    <!-- Base application theme. -->
-    <style name = "AppTheme" parent = "Theme.AppCompat.Light.DarkActionBar">
+    <!-- Base application theme        Theme.AppCompat.Light.DarkActionBar -->
+    <style name = "AppTheme" parent = "Theme.AppCompat">
         <!-- Customize your theme here. -->
 <!--         <item name="android:colorBackground">@color/colorBackground</item>
         <item name="android:textColorPrimary">@color/colorText</item>  -->
